--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongod": "^2.0.0",
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
@@ -20,11 +21,22 @@
     "uuid": "^3.2.1"
   },
   "scripts": {
-    "start": "concurrently 'yarn client' 'yarn server'",
+    "start": "concurrently \"yarn client\" \"yarn server\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "client": "react-scripts start",
-    "server": "nodemon -w server.js -w src/server server.js"
+    "server": "nodemon -w server.js -w src/server server.js",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-info": "^3.3.15",
+    "@storybook/addon-knobs": "^3.3.15",
+    "@storybook/addon-links": "^3.3.15",
+    "@storybook/addons": "^3.3.15",
+    "@storybook/react": "^3.3.15",
+    "babel-core": "^6.26.0"
   }
 }
