added PropTypes to Avatar component

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "mongod": "^2.0.0",
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
-    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^2.0.0-next.47d2d941",
@@ -37,7 +36,8 @@
     "@storybook/addon-links": "^3.3.15",
     "@storybook/addons": "^3.3.15",
     "@storybook/react": "^3.3.15",
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "prop-types": "^15.6.1"
   },
   "browserslist": {
     "development": [
