--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "uuid": "^3.2.1"
   },
   "scripts": {
-    "start": "concurrently \"yarn client\" \"yarn server\"",
+    "start": "concurrently \"npm run client\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -38,5 +38,13 @@
     "@storybook/addons": "^3.3.15",
     "@storybook/react": "^3.3.15",
     "babel-core": "^6.26.0"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 versions"
+    ],
+    "production": [
+      "last 2 versions"
+    ]
   }
 }
