--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^2.0.0-next.47d2d941",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "socket.io-cookie-parser": "^1.0.0",
