--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "server": "nodemon -w server.js -w src/server server.js",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public -o docs",
-    "lint": "eslint src"
+    "lint": "eslint ./src --fix"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.15",
