Исправлен хидер, package.json и ребилд сторибука

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongod": "^2.0.0",
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "^2.0.0-next.47d2d941",
@@ -42,8 +43,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
-    "prop-types": "^15.6.1"
+    "eslint-plugin-react": "^7.7.0"
   },
   "browserslist": {
     "development": [
