--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,12 @@
     "extends": "airbnb",
     "env": {
         "browser": true,
-        "node": true
+        "node": true,
+        "mocha": true
+    },
+    "rules": {
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "no-underscore-dangle": 0,
+        "max-len": ["error", { "code": 120 }]
     }
 }
