--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "socket.io-cookie-parser": "^1.0.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "@storybook/addon-actions": "^3.3.15",
+    "@storybook/addon-info": "^3.3.15",
+    "@storybook/addon-knobs": "^3.3.15",
+    "@storybook/addon-links": "^3.3.15",
+    "@storybook/addons": "^3.3.15",
+    "@storybook/react": "^3.3.15"
   },
   "scripts": {
     "start": "concurrently \"npm run client\" \"npm run server\"",
@@ -32,12 +38,6 @@
     "lint": "eslint --ext .js --ext .jsx ./src --fix"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.15",
-    "@storybook/addon-info": "^3.3.15",
-    "@storybook/addon-knobs": "^3.3.15",
-    "@storybook/addon-links": "^3.3.15",
-    "@storybook/addons": "^3.3.15",
-    "@storybook/react": "^3.3.15",
     "babel-core": "^6.26.0",
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
