--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "pre-commit": "^1.2.2"
   },
   "browserslist": {
     "development": [
@@ -52,5 +53,6 @@
     "production": [
       "last 2 versions"
     ]
-  }
+  },
+  "pre-commit": "lint"
 }
