--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public -o docs",
     "lint": "eslint --ext .js --ext .jsx ./src",
-    "lint:fix": "eslint --ext .js --ext .jsx ./src --fix"
+    "lint:fix": "npm run lint -- --fix"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
