lint only staged changes

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public -o docs",
     "lint": "eslint --ext .js --ext .jsx ./src",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "lint:staged": "./scripts/lint-staged.sh"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -55,5 +56,5 @@
       "last 2 versions"
     ]
   },
-  "pre-commit": "lint"
+  "pre-commit": "lint:staged"
 }
