Множественные правки стилей и функциональности

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,8 @@
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-underscore-dangle": 0,
         "max-len": ["error", { "code": 120 }],
-        "one-var": 0
+        "one-var": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
+        "jsx-a11y/no-static-element-interactions": 0
     }
 }
