--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
-sudo: false
+sudo: required
+services:
+  - docker
+before_install:
+- docker build -t deo-iuvante .
 language: node_js
-
 node_js:
-  - 'node'
-
+- node
 script:
-  - npm run lint
+- npm run lint
+deploy:
+  provider: script
+  script: bash heroku_deploy
+  on:
+    branch: master
