--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 sudo: required
 services:
   - docker
-before_install:
-- docker build -t deo-iuvante .
 language: node_js
 node_js:
 - node
 script:
 - npm run lint
+before_deploy:
+- docker build -t deo-iuvante .
 deploy:
   provider: script
   script: bash heroku_deploy
   on:
-    branch: master
+    branch: deployment
