--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "enzyme": "jest",
     "eject": "react-scripts eject",
     "client": "react-scripts start",
     "server": "nodemon -w server.js -w src/server server.js",
@@ -46,11 +47,18 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-preset-react-app": "^3.1.1",
+    "chai": "^4.1.2",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "jest-css-modules": "^1.1.0",
+    "jest-enzyme": "^6.0.0",
+    "mocha": "^5.1.0",
     "pre-commit": "^1.2.2"
   },
   "browserslist": {
@@ -59,6 +67,11 @@
     ],
     "production": [
       "last 2 versions"
+    ]
+  },
+  "babel": {
+    "presets": [
+      "react-app"
     ]
   },
   "pre-commit": "lint:staged"
