--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.0.0-next.47d2d941",
+    "react-scripts": "2.0.0-next.b2fd8db8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
@@ -46,7 +46,7 @@
     "lint:staged": "./lint-staged.sh"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-preset-react-app": "^3.1.1",
     "chai": "^4.1.2",
     "enzyme": "^3.3.0",
@@ -59,7 +59,8 @@
     "jest-css-modules": "^1.1.0",
     "jest-enzyme": "^6.0.0",
     "mocha": "^5.1.0",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "react-test-renderer": "^16.3.1"
   },
   "browserslist": {
     "development": [
