--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "start": "concurrently \"npm run client\" \"npm run server\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test:integration": "gemini test",
     "eject": "react-scripts eject",
     "client": "react-scripts start",
     "server": "nodemon -w server.js -w src/server server.js",
@@ -51,6 +52,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "gemini": "^5.6.2",
     "pre-commit": "^1.2.2"
   },
   "browserslist": {
