--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ node_js:
 script:
   - bash heroku_deploy_test_stand
   - npm run lint
+  - npm run test
   - npm run build
   - npm run test:integration
 deploy:
