--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "jest-enzyme": "^6.0.0",
     "mocha": "^5.1.0",
     "pre-commit": "^1.2.2",
-    "react-test-renderer": "^16.3.1"
+    "react-test-renderer": "^16.3.1",
+    "babel-eslint": "~8.2"
   },
   "browserslist": {
     "development": [
