--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@storybook/addon-links": "^3.3.15",
     "@storybook/addons": "^3.3.15",
     "@storybook/react": "^3.3.15",
+    "axios": "^0.18.0",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "faker": "^4.1.0",
+    "js-cookie": "^2.2.0",
     "mongod": "^2.0.0",
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
