--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.0.3",
     "nodemon": "^1.15.1",
     "prop-types": "^15.6.1",
+    "randomcolor": "^0.5.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
