--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-links": "^3.3.15",
     "@storybook/addons": "^3.3.15",
     "@storybook/react": "^3.3.15",
+    "actioncable": "^5.2.0",
     "axios": "^0.18.0",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
